<resources>
    <string name="app_name">RoomDemo</string>
    <string name="product_id">Product ID</string>
    <string name="not_assigned">Not assigned</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="add_string">Add</string>
    <string name="find_string">Find</string>
    <string name="delete_string">Delete</string>
    <string name="asc">Asc.</string>
    <string name="find">Find</string>
    <string name="enter_name">Enter Name</string>
    <string name="add">ADD</string>
    <string name="desc">Desc.</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_phone1">Enter Phone</string>
    <string name="enter_name1">Enter Name</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="contactid">contactID</string>
    <string name="deletebutton">deleteButton</string>
    <string name="idNumber">TextView</string>
</resources>